# osta-rs

./: Cargo.toml
.github/workflows/: rust.yml
osta-ast/: Cargo.toml
osta-ast/src/: lib.rs
osta-data/: Cargo.toml
osta-data/src/: either.rs
osta-func/: Cargo.toml
osta-func/src/: lib.rs
osta-func/src/combinators/: foundational.rs  mod.rs
osta-func/src/combinators/fallible/: foundational.rs  mod.rs
osta-func/src/monads/: fallible_state_monad.rs  mod.rs  state_monad.rs
osta-lexer/: Cargo.toml
osta-lexer/src/: base.rs  combinators.rs  error.rs  lib.rs  token.rs  tokenizer.rs  tokens.rs
osta-lexer/src/combinators/: mod.rs
osta-lexer/src/lexer/: mod.rs
osta-macros/: Cargo.toml
osta-parser/: Cargo.toml
osta-parser/src/: error.rs  lib.rs  parser.rs  rules.rs
osta-parser/src/parser/: ast.rs  combinators.rs  error.rs  lex.rs
osta-parser/src/rules/: block.rs  expr.rs  flow.rs  mod.rs  stmt.rs
osta-proc-macros/: Cargo.toml
osta-proc-macros/src/: lib.rs
osta-proc-macros/src/combinators/: sequence.rs
osta-proc-macros/src/implementations/: either.rs  mod.rs
osta-proc-macros/src/utils/: crate_utils.rs  mod.rs
src/: main.rs  parser.rs
src/parser/: ast.rs  combinators.rs  error.rs  lex.rs
test/: main.osta
