[package]
name = "osta-lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osta-func = { path = "../osta-func" }
osta-proc-macros = { path = "../osta-proc-macros" }
memmap2 = "0.9.4"
regex = "1.10.4"
lazy_static = "1.4.0"
